envoy/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 10000 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: service1_grpc
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: greeter_service_grpc }
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: greeter_service_grpc
    connect_timeout: 5s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    dns_lookup_family: V4_ONLY
    http2_protocol_options: { }
    hosts: [{ socket_address: { address: server, port_value: 5000 }}]
